--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     Xin chào các bạn ! 
+    <a href="https://translate.google.com/?hl=vi" title="Link tra cứu">Tìm kiếm </a>
+    <!-- <p>
+        <img src="1234.png" alt="This is image">
+        <img src="./123.jfif" alt="This is Kin" style="width: 170px; height:150px;">
+        <img src="https://icdn.24h.com.vn/upload/4-2022/images/2022-12-09/sadsavaasfasd-1670551071-769-width740height555.jpg" alt="hihi">
+    </p> -->
+    <img src="./ronaldo.jpg" alt="cr7" style="height:100px; width: 100px;">
+    <iframe width="1290" height="775" src="https://www.youtube.com/embed/RuPSxKtAr4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
 </body>
 </html>
